force-app/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Append-only audit of admin / reviewer actions.</description>
    <label>Audit Log</label>
    <nameField>
        <label>Audit Log Name</label>
        <displayFormat>{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>