force-app/main/default/objects/Audit_Log__c/fields/Actor_Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Actor_Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Actor Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Actor Salesforce User</relationshipLabel>
    <relationshipName>Cert_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>