force-app/main/default/objects/Audit_Log__c/fields/Actor_Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Actor_Slack_User_Id__c</fullName>
    <label>Actor Slack User Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>