force-app/main/default/objects/Audit_Log__c/fields/After_JSON__c.field-meta.xml
<CustomField>
    <fullName>After_JSON__c</fullName>
    <label>After JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>