force-app/main/default/objects/Audit_Log__c/fields/Before_JSON__c.field-meta.xml
<CustomField>
    <fullName>Before_JSON__c</fullName>
    <label>Before JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>