force-app/main/default/objects/Audit_Log__c/fields/Target_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Id__c</fullName>
    <label>Target Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>