force-app/main/default/objects/Audit_Log__c/fields/Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Target_Type__c</fullName>
    <label>Target Type</label>
    <type>Text</type>
    <length>80</length>
    <length>80</length>
</CustomField>